Fixing onPoint logo title a inline-block spacing

--- a/project/css/styles.css
+++ b/project/css/styles.css
@@ -404,6 +404,12 @@ div.featured_region.curr_region {
 	header h1#onpoint_title {
 		display: block;
 	}
+	header h1#onpoint_title a {
+		display: inline-block;
+	}
+	header h1#onpoint_title a:hover {
+		color: #000;
+	}
 	header h1#onpoint_title span {
 		vertical-align: middle;
 	}
